--- a/package.json
+++ b/package.json
@@ -28,14 +28,12 @@
     "yeelight"
   ],
   "dependencies": {
+    "colord": "^2.9.3",
     "delay": "^5.0.0",
-    "homebridge-lib": "^5.5.0",
-    "node-schedule": "^2.1.0",
     "yeelight-platform": "^1.0.9"
   },
   "devDependencies": {
     "@types/node": "^16.10.9",
-    "@types/node-schedule": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
