--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": false,
   "displayName": "Homebridge Yeelight Screen Light Bar",
   "name": "homebridge-yeelight-screen-light-bar",
-  "version": "1.0.2",
+  "version": "1.0.3-beta.0",
   "description": "Homebridge plugin for YeeLight Screen Light Bar",
   "license": "MIT",
   "repository": {
